shelter/style/style.css
/* ... */
@media (max-width: 750px) {
    .carousel {
        flex-wrap: wrap;
        row-gap: 20px;
        column-gap: 80px;
    }

    .carousel__cards {
        order: -1;
        justify-content: center;
    }

    .carousel__cards .pets__card:not(:first-child) {
        display: none;
    }
}

@media (max-width: 320px) {
    .center {
        max-width: 300px;
        padding-right: 0;
        padding-left: 0;
    }

    .heading {
        text-align: center;
    }

    .heading_L {
        font-size: 25px;
        letter-spacing: 0.06em;
    }

    .heading_M {
        font-size: 25px;
    }

    .heading_XS {
        letter-spacing: 0;
    }

    .header-wrapper {
        padding: 0 10px;
    }

    .navigation__burger {
        display: block;
    }

    .navigation__list {
        display: none;
    }

    .top::after {
        min-height: 823px;
    }

    .top-wrapper {
        justify-content: normal;
        gap: 105px;
        min-height: 673px;
    }

    .top-content {
        display: grid;
    }

    .top-content__button {
        padding-top: 12px;
        padding-bottom: 12px;
    }

    .top__image {
        max-height: 271px;
    }

    .top__text {
        text-align: center;
    }

    .about {
        padding: 27px 10px 42px;
    }

    .about-wrapper {
        justify-content: center;
        gap: 42px;
    }

    .about__image {
        max-height: 353px;
    }

    .about-content {
        padding-left: 15px;
        padding-right: 15px;
        gap: 0;
    }

    .about-content .heading {
        margin-bottom: 25px;
    }

    .about__text {
        text-align: justify;
    }

    .about__text+.about__text {
        margin-top: 22px;
    }

    .pets {
        padding: 42px 0;
    }

    .pets__heading {
        margin-bottom: 42px;
    }

    .carousel {
        flex-direction: row;
        max-width: 320px;
    }

    .carousel__cards .pets__card:not(:first-child) {
        display: none;
    }

    .carousel__control {
        width: 52px;
    }

    .carousel__button {
        margin-top: 38px;
    }

    .help {
        padding: 42px 0 37px;
    }

    .help__heading {
        margin-bottom: 42px;
    }

    .help__list {
        width: 290px;
        gap: 30px;
        justify-content: flex-start;
    }

    .help__list .heading_S {
        font-size: 15px;
    }

    .help__item {
        width: 130px;
    }

    .help__item::before {
        width: 50px;
        height: 50px;
        margin-bottom: 18px;
    }

    .donation {
        padding-top: 43px;
        padding-bottom: 42px;
    }

    .donation-wrapper {
        flex-direction: column;
        align-items: center;
        gap: 42px;
    }

    .donation-content {
        order: -1;
        align-items: center;
        gap: 24px;
        padding: 0 10px;
    }

    .donation .heading_S {
        font-size: 15px;
    }

    .donation__banking {
        width: 281px;
        height: 43px;
        padding-top: 9px;
    }

    .donation__image-wrapper {
        padding-top: 0;
    }

    .donation__image {
        max-height: 135px;
    }

    .text_legal {
        margin-top: -5px;
        text-align: justify;
    }

    .footer-wrapper {
        flex-direction: column;
        flex-wrap: nowrap;
    }

    .footer-content {
        flex-direction: column;
        width: 300px;
        padding-top: 0;
        gap: 40px;
    }

    .footer__address {
        display: flex;
        flex-direction: column;
    }

    .footer__contacts,
    .footer__address {
        padding-bottom: 0;
    }

    .footer__contacts {
        align-items: center;
    }


    a[href="mailto:email@shelter.com"]::before {
        margin-top: -5px;
    }

    .footer__address .footer__heading {
        margin-bottom: 38px;
        width: 270px;
        align-self: center;
    }

    .footer__address address:first-of-type {
        margin-bottom: 43px;
    }

    .footer__address address::before {
        left: 1px;
    }

    .footer__address address:first-of-type::before {
        top: 9px;
    }

    /* .pets-catalog {
        padding: 42px 0;
    }

    .pets__cards .pets__card:nth-child(4),
    .pets__cards .pets__card:nth-child(5),
    .pets__cards .pets__card:nth-child(6),
    .pets__cards .pets__card:nth-child(7),
    .pets__cards .pets__card:nth-child(8) {
        display: none;
    }

    .pets__pagination {
        padding-top: 42px;
    } */
    /*
    .pagination__list {
        gap: 10px;
    } */
}

